samples/_failures_safe/1761353183_eb6ae3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d99a7778.c: In function ‘main’:
./samples/SAFE/__tmp_d99a7778.c:160:5: error: expected declaration or statement at end of input
  160 |     printf("Tokens found: %d\n", token_count);
      |     ^~~~~~
